--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "description": "Front End Capstone",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "mocha"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rpp31-fec-mustard/fec.git"
@@ -17,7 +14,8 @@
   },
   "homepage": "https://github.com/rpp31-fec-mustard/fec#readme",
   "scripts": {
-    "server-dev": "npx nodemon <server here> --watch",
+    "test": "mocha",
+    "server-dev": "npx nodemon <!server here> --watch",
     "react-dev": "webpack --mode-development --watch"
   },
   "dependencies": {
@@ -44,5 +42,5 @@
     "typescript": "^4.4.4",
     "webpack": "^5.59.1",
     "webpack-cli": "^4.9.1"
-  },
+  }
 }
