--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "axios": "^0.23.0",
     "express": "^4.17.1",
@@ -23,5 +26,11 @@
     "typescript": "^4.4.4",
     "webpack": "^5.59.1",
     "webpack-cli": "^4.9.1"
+  },
+  "jest": {
+    "verbose": true,
+    "rootDir": "test",
+    "testTimeout": 2000,
+    "watchman": true
   }
 }
