--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "test": "jest",
     "start": "nodemon server/server.js --watch",
-    "react-dev": "webpack --mode development --watch"
+    "react-dev": "webpack --mode development --watch",
+    "lint": "eslint ./"
   },
   "dependencies": {
     "axios": "^0.23.0",
