--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "test": "jest",
     "start": "nodemon server/server.js --watch",
-    "lint": "eslint ./"
+    "lint": "eslint ./",
     "build": "webpack --mode development --watch"
   },
   "dependencies": {
