--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "axios": "^0.23.0",
     "express": "^4.17.1",
+    "install": "^0.13.0",
     "jest": "^27.3.1",
     "jquery": "^3.6.0",
+    "npm": "^8.1.1",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -50,6 +52,7 @@
     "verbose": true,
     "rootDir": "test",
     "testTimeout": 2000,
-    "watchman": true
+    "watchman": true,
+    "testEnvironment": "jsdom"
   }
 }
