--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "underscore": "^1.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
