--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "axios": "^0.23.0",
     "express": "^4.17.1",
     "install": "^0.13.0",
@@ -30,6 +31,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
+    "sinon": "^11.1.2",
     "underscore": "^1.13.1"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "babel-loader": "^8.2.3",
     "body-parser": "^1.19.0",
     "css-loader": "^6.4.0",
+    "enzyme": "^3.11.0",
     "eslint": "^8.0.1",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.14",
