--- a/package.json
+++ b/package.json
@@ -30,16 +30,19 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
+    "sinon": "^11.1.2",
     "underscore": "^1.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.3",
     "body-parser": "^1.19.0",
     "css-loader": "^6.4.0",
+    "enzyme": "^3.11.0",
     "eslint": "^8.0.1",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.14",
