--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "nodemon": "^2.0.14",
     "pre-commit": "^1.2.2",
     "style-loader": "^3.3.1",
+    "supertest": "^6.1.6",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
     "webpack": "^5.59.1",
