--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
-    "sinon": "^11.1.2",
+    "regenerator-runtime": "^0.13.9",
     "underscore": "^1.13.1"
   },
   "devDependencies": {
@@ -50,11 +50,11 @@
     "css-loader": "^6.4.0",
     "enzyme": "^3.11.0",
     "eslint": "^8.0.1",
+    "jest-react-hooks-shallow": "^1.5.1",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.14",
     "pre-commit": "^1.2.2",
     "style-loader": "^3.3.1",
-    "supertest": "^6.1.6",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
     "webpack": "^5.59.1",
@@ -65,6 +65,7 @@
     "rootDir": "test",
     "testTimeout": 2000,
     "watchman": true,
-    "testEnvironment": "jsdom"
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": ["./jest.setup.js"]
   }
 }
