--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "url": "https://github.com/rpp31-fec-mustard/fec/issues"
   },
   "homepage": "https://github.com/rpp31-fec-mustard/fec#readme",
-
   "scripts": {
     "test": "jest --silent; exit 0",
     "start": "nodemon server/server.js --watch",
@@ -24,9 +23,11 @@
     "lint",
     "test"
   ],
+  "sideEffects": false,
   "dependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "axios": "^0.23.0",
+    "compression": "^1.7.4",
     "enzyme": "^3.11.0",
     "express": "^4.17.1",
     "install": "^0.13.0",
@@ -48,6 +49,7 @@
     "babel": "^6.23.0",
     "babel-loader": "^8.2.3",
     "body-parser": "^1.19.0",
+    "compression-webpack-plugin": "^9.0.0",
     "css-loader": "^6.4.0",
     "enzyme": "^3.11.0",
     "eslint": "^8.0.1",
