--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,13 @@ dist
 bundle.js
 bundle.js*
 dummyData.js
+
+## Tests ##
 test/coverage
+TestFolder
+__snapshots__
+TestOfTests*
+
 
 ## API Keys ##
 API_paths.txt
