--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "url": "https://github.com/rpp31-fec-mustard/fec/issues"
   },
   "homepage": "https://github.com/rpp31-fec-mustard/fec#readme",
-
   "scripts": {
     "test": "jest",
     "start": "nodemon server/server.js --watch",
@@ -44,6 +43,9 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
+    "@testing-library/dom": "^8.11.0",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.3",
@@ -53,6 +55,7 @@
     "eslint": "^8.0.1",
     "jest-react-hooks-shallow": "^1.5.1",
     "mocha": "^9.1.3",
+    "msw": "^0.35.0",
     "nodemon": "^2.0.14",
     "pre-commit": "^1.2.2",
     "style-loader": "^3.3.1",
