--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/rpp31-fec-mustard/fec#readme",
   "scripts": {
     "test": "jest --silent",
+    "test-watch": "jest --watch",
     "start": "nodemon server/server.js --watch",
     "lint": "eslint ./",
     "build": "webpack --mode development --watch"
