--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "msw": "^0.35.0",
     "nodemon": "^2.0.14",
     "pre-commit": "^1.2.2",
+    "sinon": "^12.0.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
