--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "homepage": "https://github.com/rpp31-fec-mustard/fec#readme",
   "scripts": {
-    "test": "jest",
+    "test": "jest --silent",
     "test-watch": "jest --watch",
     "start": "nodemon server/server.js --watch",
     "lint": "eslint ./",
