--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
+    "react-tracking": "^9.0.0",
     "regenerator-runtime": "^0.13.9",
     "underscore": "^1.13.1"
   },
