Scroll expanded view image
some refactor of error messages in apiHelpers to squelch long error messages.
refactor next/prev image arrows for expanded view

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-scripts": "^4.0.3",
     "react-tracking": "^9.0.0",
     "regenerator-runtime": "^0.13.9",
+    "rxjs": "^7.4.0",
     "underscore": "^1.13.1"
   },
   "devDependencies": {
