--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^0.23.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "compression": "^1.7.4",
+    "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
     "express": "^4.17.1",
     "install": "^0.13.0",
