--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ dist
 bundle.js
 bundle.js*
 dummyData.js
+deploy.sh
+fec.pem
 
 ## Tests ##
 test/coverage
@@ -18,6 +20,7 @@ fetch.js
 API_paths.txt
 API_product_ref.txt
 config.js
+config.env
 
 
 
