--- a/package.json
+++ b/package.json
@@ -53,9 +53,10 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
-    "@testing-library/dom": "^8.11.0",
+    "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.3",
