--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "install": "^0.13.0",
     "jest": "^27.3.1",
     "jquery": "^3.6.0",
+    "jquery.scrollto": "^2.1.3",
     "npm": "^8.1.1",
     "path": "^0.12.7",
     "react": "^17.0.2",
