--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start": "nodemon server/server.js --watch",
     "build": "webpack --watch",
     "coverage": "jest --coverage",
-    "test": "jest; exit 0",
+    "test": "jest --silent; exit 0",
     "test-log": "jest",
     "test-watch": "jest --watch",
     "lint": "eslint ./"
